--- a/MyJanken/Base.lproj/Main.storyboard
+++ b/MyJanken/Base.lproj/Main.storyboard
@@ -1,24 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MyJanken" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="これからじゃんけんをします！" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xB0-eh-ckb">
+                                <rect key="frame" x="0.0" y="722" width="414" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Vva-Qs-gbp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Vz-3s-WkC">
+                                <rect key="frame" x="0.0" y="762" width="414" height="100"/>
+                                <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="ZNt-Ny-Yyn"/>
+                                    <constraint firstAttribute="height" constant="100" id="z8i-bL-0a4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="じゃんけんをする！">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="shuffleAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oSV-f9-jzM"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jjI-DG-GZr">
+                                <rect key="frame" x="0.0" y="44" width="414" height="678"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.3529411764705882" green="0.94901960784313721" blue="0.77647058823529413" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="xB0-eh-ckb" firstAttribute="top" secondItem="jjI-DG-GZr" secondAttribute="bottom" id="3Wj-7O-CIc"/>
+                            <constraint firstItem="jjI-DG-GZr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="5bS-oZ-9op"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jjI-DG-GZr" secondAttribute="trailing" id="IUc-7V-kt7"/>
+                            <constraint firstItem="jjI-DG-GZr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="IpN-dh-rp8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xB0-eh-ckb" secondAttribute="trailing" id="Jig-LQ-kc2"/>
+                            <constraint firstItem="xB0-eh-ckb" firstAttribute="top" secondItem="jjI-DG-GZr" secondAttribute="bottom" id="Ker-qU-kNS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jjI-DG-GZr" secondAttribute="trailing" id="OSc-kA-ijC"/>
+                            <constraint firstItem="jjI-DG-GZr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Sva-P1-G1i"/>
+                            <constraint firstItem="xB0-eh-ckb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Vu2-Jl-ExM"/>
+                            <constraint firstItem="jjI-DG-GZr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ZMM-RV-Y4v"/>
+                            <constraint firstItem="6Vz-3s-WkC" firstAttribute="top" secondItem="xB0-eh-ckb" secondAttribute="bottom" id="ZXI-fG-WPA"/>
+                            <constraint firstItem="6Vz-3s-WkC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="aiR-Z8-r6u"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6Vz-3s-WkC" secondAttribute="trailing" id="avG-Kl-Ijh"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jjI-DG-GZr" secondAttribute="trailing" id="dHQ-5D-Xmh"/>
+                            <constraint firstItem="jjI-DG-GZr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fbn-Ez-1oF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6Vz-3s-WkC" secondAttribute="bottom" id="gER-xl-ld3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6Vz-3s-WkC" secondAttribute="trailing" id="gkO-5r-h7C"/>
+                            <constraint firstItem="6Vz-3s-WkC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ncy-cU-zuf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6Vz-3s-WkC" secondAttribute="bottom" id="phc-7v-0oS"/>
+                            <constraint firstItem="jjI-DG-GZr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="r5y-QC-Bqt"/>
+                            <constraint firstItem="xB0-eh-ckb" firstAttribute="top" secondItem="jjI-DG-GZr" secondAttribute="bottom" id="zRL-mA-0Kl"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="answerImageView" destination="jjI-DG-GZr" id="MvZ-wf-t1D"/>
+                        <outlet property="answerLabel" destination="xB0-eh-ckb" id="vho-A3-JyA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="34.782608695652179" y="93.75"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
